// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
Object {
  "data": Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    2,
    19,
    109,
    144,
    205,
    106,
    195,
    48,
    16,
    132,
    239,
    122,
    138,
    69,
    189,
    200,
    198,
    216,
    166,
    244,
    84,
    147,
    23,
    40,
    9,
    45,
    133,
    158,
    140,
    17,
    178,
    188,
    73,
    149,
    216,
    146,
    170,
    159,
    198,
    33,
    248,
    221,
    171,
    52,
    41,
    244,
    144,
    211,
    194,
    176,
    59,
    223,
    206,
    28,
    177,
    183,
    66,
    30,
    94,
    188,
    209,
    150,
    181,
    117,
    87,
    180,
    164,
    202,
    161,
    134,
    188,
    74,
    51,
    207,
    43,
    96,
    219,
    168,
    101,
    80,
    70,
    179,
    201,
    12,
    113,
    196,
    2,
    56,
    63,
    94,
    143,
    56,
    206,
    214,
    184,
    224,
    57,
    255,
    47,
    58,
    252,
    138,
    202,
    33,
    231,
    25,
    156,
    9,
    161,
    209,
    35,
    248,
    224,
    148,
    12,
    180,
    33,
    175,
    253,
    30,
    101,
    40,
    7,
    220,
    42,
    141,
    111,
    206,
    88,
    116,
    225,
    196,
    238,
    26,
    82,
    206,
    209,
    111,
    126,
    145,
    180,
    128,
    51,
    124,
    139,
    49,
    226,
    51,
    4,
    23,
    17,
    150,
    172,
    33,
    210,
    104,
    31,
    96,
    134,
    21,
    60,
    61,
    54,
    132,
    252,
    125,
    9,
    66,
    8,
    96,
    243,
    133,
    13,
    224,
    48,
    68,
    167,
    97,
    110,
    200,
    66,
    46,
    177,
    62,
    133,
    155,
    140,
    62,
    65,
    226,
    139,
    56,
    6,
    184,
    226,
    82,
    214,
    123,
    153,
    90,
    122,
    91,
    163,
    93,
    130,
    176,
    228,
    155,
    168,
    228,
    214,
    202,
    146,
    145,
    84,
    85,
    221,
    37,
    169,
    170,
    30,
    192,
    155,
    232,
    36,
    110,
    132,
    181,
    74,
    239,
    62,
    222,
    215,
    171,
    73,
    40,
    93,
    246,
    81,
    15,
    35,
    150,
    123,
    95,
    78,
    194,
    254,
    0,
    44,
    18,
    150,
    189,
    105,
    1,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`Default 2`] = `
Object {
  "data": Array [
    31,
    139,
    8,
    0,
    0,
    0,
    0,
    0,
    2,
    19,
    165,
    88,
    91,
    111,
    219,
    54,
    20,
    126,
    246,
    126,
    5,
    171,
    1,
    181,
    188,
    186,
    114,
    218,
    167,
    33,
    158,
    49,
    172,
    105,
    10,
    164,
    232,
    13,
    109,
    247,
    100,
    24,
    6,
    45,
    81,
    49,
    91,
    153,
    212,
    72,
    42,
    174,
    81,
    228,
    191,
    239,
    80,
    164,
    100,
    82,
    162,
    108,
    15,
    51,
    130,
    36,
    18,
    121,
    14,
    207,
    245,
    59,
    31,
    61,
    251,
    173,
    254,
    204,
    80,
    156,
    87,
    44,
    85,
    148,
    179,
    120,
    199,
    179,
    170,
    32,
    114,
    130,
    126,
    162,
    217,
    12,
    237,
    201,
    166,
    196,
    233,
    247,
    87,
    156,
    43,
    169,
    4,
    46,
    127,
    153,
    53,
    18,
    35,
    88,
    165,
    76,
    42,
    92,
    20,
    8,
    163,
    183,
    95,
    62,
    126,
    248,
    132,
    82,
    120,
    216,
    192,
    118,
    148,
    115,
    129,
    210,
    109,
    197,
    190,
    163,
    130,
    227,
    140,
    178,
    123,
    71,
    238,
    1,
    11,
    84,
    98,
    65,
    152,
    122,
    43,
    57,
    43,
    223,
    216,
    131,
    209,
    2,
    237,
    41,
    203,
    248,
    126,
    25,
    217,
    67,
    235,
    229,
    104,
    53,
    119,
    100,
    195,
    59,
    64,
    180,
    49,
    31,
    185,
    43,
    55,
    214,
    156,
    184,
    54,
    229,
    46,
    147,
    83,
    180,
    227,
    130,
    188,
    55,
    30,
    78,
    17,
    249,
    65,
    210,
    74,
    53,
    207,
    224,
    177,
    115,
    146,
    118,
    15,
    103,
    25,
    138,
    28,
    137,
    8,
    41,
    142,
    212,
    150,
    32,
    27,
    35,
    196,
    55,
    223,
    72,
    170,
    166,
    29,
    49,
    216,
    193,
    80,
    94,
    224,
    123,
    164,
    99,
    19,
    53,
    135,
    71,
    8,
    203,
    58,
    28,
    36,
    67,
    152,
    101,
    40,
    167,
    130,
    180,
    17,
    115,
    85,
    232,
    0,
    153,
    19,
    238,
    178,
    41,
    178,
    226,
    83,
    68,
    193,
    205,
    171,
    41,
    18,
    68,
    242,
    226,
    1,
    14,
    95,
    160,
    229,
    170,
    126,
    172,
    10,
    229,
    198,
    104,
    4,
    193,
    143,
    231,
    20,
    253,
    209,
    136,
    202,
    164,
    32,
    236,
    94,
    109,
    231,
    136,
    62,
    123,
    214,
    241,
    114,
    100,
    247,
    128,
    182,
    102,
    247,
    146,
    122,
    33,
    31,
    141,
    104,
    30,
    219,
    68,
    147,
    236,
    70,
    111,
    146,
    75,
    187,
    119,
    213,
    213,
    54,
    106,
    172,
    75,
    202,
    74,
    110,
    7,
    197,
    150,
    87,
    171,
    137,
    127,
    198,
    163,
    127,
    226,
    128,
    156,
    142,
    128,
    39,
    247,
    216,
    245,
    187,
    137,
    27,
    148,
    166,
    155,
    235,
    174,
    157,
    224,
    210,
    199,
    58,
    119,
    73,
    41,
    184,
    226,
    234,
    80,
    146,
    100,
    139,
    229,
    199,
    61,
    251,
    36,
    120,
    73,
    132,
    58,
    36,
    58,
    51,
    177,
    87,
    46,
    141,
    238,
    73,
    207,
    107,
    91,
    15,
    203,
    102,
    135,
    54,
    212,
    17,
    61,
    190,
    63,
    225,
    180,
    247,
    0,
    246,
    5,
    90,
    100,
    18,
    234,
    155,
    11,
    139,
    219,
    59,
    121,
    191,
    165,
    5,
    137,
    219,
    92,
    153,
    242,
    232,
    122,
    213,
    46,
    203,
    45,
    205,
    85,
    60,
    137,
    39,
    243,
    83,
    246,
    158,
    108,
    166,
    58,
    55,
    116,
    113,
    5,
    37,
    8,
    117,
    233,
    111,
    61,
    85,
    157,
    35,
    83,
    222,
    16,
    206,
    245,
    218,
    118,
    246,
    90,
    144,
    127,
    42,
    104,
    157,
    245,
    58,
    14,
    188,
    75,
    116,
    95,
    248,
    250,
    161,
    158,
    39,
    151,
    198,
    93,
    16,
    85,
    9,
    22,
    104,
    170,
    199,
    227,
    131,
    15,
    129,
    95,
    91,
    56,
    128,
    94,
    78,
    183,
    164,
    3,
    116,
    109,
    37,
    91,
    99,
    192,
    186,
    159,
    131,
    186,
    12,
    156,
    72,
    141,
    50,
    82,
    65,
    46,
    93,
    180,
    176,
    56,
    106,
    186,
    84,
    14,
    157,
    98,
    250,
    69,
    31,
    226,
    122,
    245,
    226,
    26,
    93,
    93,
    234,
    139,
    141,
    100,
    11,
    168,
    206,
    142,
    22,
    99,
    67,
    185,
    104,
    155,
    195,
    57,
    186,
    131,
    139,
    55,
    91,
    2,
    163,
    129,
    230,
    77,
    188,
    168,
    212,
    93,
    218,
    141,
    154,
    7,
    55,
    189,
    6,
    234,
    23,
    105,
    157,
    176,
    97,
    129,
    132,
    252,
    40,
    185,
    80,
    114,
    184,
    118,
    181,
    101,
    130,
    96,
    69,
    96,
    140,
    49,
    178,
    111,
    172,
    139,
    117,
    212,
    203,
    74,
    33,
    10,
    63,
    204,
    2,
    127,
    109,
    236,
    36,
    12,
    214,
    16,
    245,
    97,
    51,
    186,
    41,
    25,
    209,
    235,
    35,
    198,
    123,
    11,
    197,
    53,
    202,
    113,
    33,
    137,
    255,
    214,
    122,
    113,
    13,
    213,
    227,
    57,
    50,
    31,
    10,
    246,
    173,
    233,
    1,
    103,
    92,
    133,
    82,
    218,
    71,
    174,
    6,
    247,
    244,
    99,
    19,
    187,
    6,
    250,
    154,
    191,
    199,
    247,
    129,
    74,
    152,
    12,
    154,
    244,
    70,
    143,
    68,
    199,
    158,
    118,
    28,
    246,
    13,
    74,
    10,
    8,
    152,
    18,
    21,
    25,
    84,
    246,
    217,
    36,
    94,
    171,
    179,
    214,
    32,
    158,
    59,
    218,
    3,
    93,
    237,
    27,
    239,
    117,
    247,
    96,
    67,
    64,
    141,
    230,
    84,
    247,
    54,
    103,
    10,
    67,
    122,
    17,
    103,
    197,
    193,
    156,
    202,
    148,
    56,
    152,
    118,
    76,
    250,
    109,
    228,
    145,
    159,
    35,
    59,
    209,
    188,
    8,
    88,
    5,
    213,
    15,
    184,
    232,
    55,
    115,
    8,
    209,
    136,
    75,
    111,
    236,
    235,
    91,
    38,
    43,
    65,
    26,
    232,
    239,
    52,
    69,
    31,
    17,
    94,
    99,
    133,
    221,
    242,
    236,
    140,
    213,
    249,
    80,
    251,
    57,
    194,
    11,
    24,
    189,
    3,
    205,
    167,
    155,
    6,
    198,
    230,
    142,
    74,
    114,
    164,
    145,
    118,
    122,
    104,
    26,
    105,
    255,
    133,
    249,
    129,
    30,
    135,
    102,
    72,
    151,
    121,
    53,
    10,
    209,
    142,
    96,
    136,
    122,
    148,
    86,
    66,
    79,
    62,
    136,
    189,
    141,
    105,
    148,
    156,
    53,
    250,
    28,
    86,
    180,
    27,
    151,
    47,
    87,
    151,
    153,
    37,
    65,
    67,
    217,
    154,
    166,
    193,
    171,
    78,
    115,
    15,
    194,
    106,
    138,
    107,
    119,
    45,
    78,
    198,
    71,
    19,
    56,
    13,
    250,
    61,
    130,
    242,
    95,
    242,
    167,
    169,
    96,
    71,
    95,
    199,
    33,
    63,
    236,
    193,
    8,
    128,
    18,
    107,
    242,
    96,
    207,
    129,
    148,
    80,
    131,
    188,
    190,
    246,
    122,
    75,
    176,
    230,
    146,
    25,
    79,
    171,
    29,
    228,
    43,
    185,
    39,
    234,
    182,
    32,
    250,
    95,
    249,
    234,
    240,
    21,
    223,
    127,
    192,
    59,
    18,
    143,
    245,
    174,
    241,
    4,
    88,
    224,
    188,
    43,
    47,
    83,
    65,
    75,
    229,
    106,
    72,
    107,
    108,
    182,
    74,
    226,
    177,
    217,
    48,
    246,
    29,
    50,
    47,
    19,
    77,
    227,
    64,
    116,
    172,
    200,
    15,
    53,
    251,
    134,
    31,
    176,
    221,
    28,
    218,
    155,
    110,
    177,
    128,
    116,
    234,
    237,
    149,
    202,
    159,
    255,
    30,
    220,
    132,
    229,
    129,
    165,
    61,
    36,
    114,
    14,
    164,
    59,
    194,
    43,
    173,
    228,
    197,
    203,
    43,
    248,
    132,
    35,
    7,
    19,
    47,
    72,
    85,
    88,
    218,
    205,
    186,
    85,
    11,
    118,
    253,
    165,
    148,
    160,
    27,
    0,
    240,
    56,
    98,
    156,
    165,
    36,
    10,
    98,
    173,
    86,
    49,
    60,
    216,
    26,
    109,
    34,
    13,
    243,
    167,
    164,
    68,
    207,
    80,
    20,
    193,
    175,
    230,
    18,
    0,
    143,
    201,
    166,
    98,
    25,
    160,
    228,
    55,
    25,
    245,
    146,
    115,
    116,
    23,
    44,
    252,
    106,
    30,
    98,
    206,
    190,
    212,
    231,
    220,
    240,
    93,
    89,
    16,
    5,
    21,
    104,
    98,
    17,
    204,
    16,
    103,
    68,
    8,
    192,
    192,
    5,
    106,
    95,
    232,
    66,
    130,
    231,
    174,
    26,
    255,
    70,
    211,
    192,
    95,
    119,
    87,
    220,
    141,
    160,
    198,
    142,
    7,
    78,
    51,
    192,
    141,
    29,
    42,
    8,
    254,
    94,
    115,
    140,
    187,
    219,
    36,
    20,
    231,
    97,
    107,
    88,
    85,
    20,
    62,
    103,
    76,
    65,
    153,
    104,
    124,
    182,
    129,
    232,
    208,
    74,
    29,
    34,
    211,
    28,
    23,
    66,
    173,
    134,
    45,
    35,
    240,
    36,
    4,
    175,
    237,
    114,
    111,
    193,
    220,
    218,
    150,
    47,
    86,
    177,
    198,
    150,
    91,
    237,
    68,
    60,
    126,
    231,
    50,
    68,
    52,
    246,
    210,
    58,
    6,
    78,
    1,
    99,
    44,
    75,
    198,
    147,
    142,
    209,
    157,
    155,
    215,
    169,
    171,
    23,
    20,
    6,
    201,
    41,
    35,
    217,
    41,
    54,
    237,
    173,
    233,
    62,
    79,
    112,
    89,
    18,
    6,
    234,
    104,
    145,
    197,
    38,
    206,
    3,
    20,
    193,
    226,
    115,
    15,
    133,
    78,
    48,
    86,
    61,
    203,
    37,
    9,
    220,
    201,
    221,
    142,
    179,
    43,
    64,
    77,
    206,
    76,
    218,
    93,
    125,
    109,
    171,
    55,
    95,
    124,
    96,
    15,
    252,
    67,
    138,
    211,
    0,
    55,
    28,
    58,
    193,
    196,
    24,
    1,
    112,
    42,
    34,
    124,
    230,
    0,
    144,
    181,
    227,
    236,
    208,
    16,
    158,
    51,
    135,
    102,
    14,
    111,
    136,
    91,
    198,
    198,
    0,
    128,
    167,
    86,
    123,
    167,
    174,
    160,
    220,
    158,
    132,
    20,
    113,
    95,
    186,
    119,
    253,
    181,
    55,
    105,
    99,
    120,
    115,
    127,
    238,
    158,
    216,
    169,
    96,
    224,
    83,
    57,
    189,
    175,
    4,
    222,
    20,
    36,
    72,
    120,
    71,
    132,
    1,
    254,
    219,
    117,
    141,
    191,
    157,
    101,
    240,
    224,
    218,
    186,
    225,
    87,
    227,
    48,
    32,
    14,
    86,
    17,
    168,
    121,
    77,
    114,
    12,
    87,
    190,
    219,
    218,
    104,
    63,
    234,
    41,
    96,
    13,
    86,
    116,
    67,
    11,
    170,
    14,
    104,
    79,
    213,
    22,
    1,
    36,
    63,
    111,
    146,
    97,
    11,
    230,
    76,
    50,
    152,
    155,
    12,
    35,
    18,
    96,
    109,
    54,
    233,
    77,
    21,
    162,
    167,
    79,
    27,
    210,
    186,
    94,
    19,
    105,
    10,
    7,
    253,
    233,
    95,
    172,
    27,
    83,
    143,
    78,
    196,
    134,
    116,
    57,
    156,
    119,
    57,
    206,
    204,
    210,
    120,
    5,
    28,
    12,
    93,
    15,
    106,
    48,
    71,
    152,
    40,
    200,
    190,
    30,
    16,
    246,
    162,
    27,
    44,
    187,
    216,
    120,
    49,
    69,
    99,
    60,
    110,
    43,
    109,
    30,
    104,
    116,
    179,
    116,
    81,
    159,
    95,
    242,
    101,
    205,
    153,
    12,
    112,
    55,
    3,
    246,
    139,
    59,
    141,
    53,
    181,
    2,
    199,
    211,
    139,
    190,
    23,
    234,
    201,
    123,
    145,
    241,
    109,
    63,
    26,
    83,
    86,
    155,
    130,
    166,
    107,
    168,
    166,
    237,
    122,
    125,
    198,
    220,
    18,
    204,
    141,
    162,
    193,
    111,
    10,
    24,
    50,
    163,
    203,
    191,
    89,
    212,
    116,
    165,
    207,
    204,
    130,
    225,
    32,
    30,
    60,
    8,
    13,
    6,
    250,
    150,
    3,
    44,
    18,
    174,
    72,
    245,
    68,
    209,
    47,
    231,
    0,
    117,
    130,
    239,
    245,
    105,
    126,
    242,
    31,
    91,
    48,
    253,
    255,
    31,
    199,
    185,
    120,
    89,
    127,
    89,
    51,
    251,
    21,
    73,
    94,
    137,
    148,
    188,
    135,
    233,
    1,
    206,
    252,
    253,
    249,
    221,
    66,
    84,
    76,
    207,
    221,
    35,
    65,
    73,
    118,
    184,
    252,
    23,
    252,
    65,
    80,
    82,
    193,
    22,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
